# flask_docker_ts

./: .env  Dockerfile  app.py  docker-compose.yml  pyproject.toml  settings.py
